fix:/make the dragged card visible when dragging

--- a/src/tasks/taskCard.css
+++ b/src/tasks/taskCard.css
@@ -6,7 +6,7 @@
     align-items: center;
 
     border-radius: 4px;
-    /* Task Card/Hover */
+    background-color: white;
     box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.1);
 }
 
